<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrackingActivity"
    android:orientation="vertical" >

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1,2"   
    android:shrinkColumns="1,2"
   >
   <TableRow>       
       <TextView           
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>  
        
    </TableRow>  
    <TableRow>
 
       <TextView           
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/longtitude_value"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>       
       
  
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/altitude_value"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>   
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_mode"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/start_mode_value"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>   
    </TableRow>
    <TableRow>       
      <TextView           
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/accuracy"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/accuracy_value"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
       <TextView           
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/TTFF"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/TTFF_value"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/COUNT"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/ttff_count"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
       <TextView           
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/interval"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/ttff_interval"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>   
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/time_out"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/time_out"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
       <TextView           
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/pre_TTFF"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/pre_ttff"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>   
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/avg_TTFF"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/avg_ttff"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
       <TextView           
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:text="@string/max_TTFF"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/max_ttff"
        android:layout_width="0dp"
        android:layout_height="20sp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>          
    </TableRow>
    <TableRow>       
       <TextView           
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:text="@string/time"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>    
       <TextView           
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>   
    </TableRow>
</TableLayout>

     <ListView android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    ></ListView>


</LinearLayout>
